--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,69 +1,124 @@
 @import "../../styles/variables";
 
+
 .navbar{
   display: flex;
   justify-content: center;
-  padding-top: 30px;
+  padding: 40px 20px 0;
+
   .container{
-      max-width: 1121px;
-      width: 100%;
-  }
-}
-.menu{
-  display: flex;
-  justify-content: space-between;
-
-  ul {
+    max-width: 1200px;
+    width: 100%;
     display: flex;
-    flex-direction: row;
 
-    .logo {
-      padding-left: 0;
-      padding-right: 48px;
+    .logo{
+      margin-right: 40px;
     }
 
-    li {
-      list-style: none;
+    .menu{
+      width: 100%;
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      align-content: center;
-      padding: 0 24px;
 
+      ul{
+        list-style: none;
+        display: flex;
 
-      a {
-        align-self: center;
-        color: #141B2D;
-        font-family: $body-font;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 34px;
+        li {
+          display: inline-block;
 
+          a{
+            color: #141B2D;
+            padding: 0 24px;
+            font-family: $body-font;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 34px;
+            transition: 0.3s;
 
-        &:hover {
-          color: $hover;
-          transition: 0.3s;
+            &:hover{
+              color: $hover;
+            }
+          }
         }
       }
 
+      .signIn{
+        background-color: $blue;
+        border-radius: 4px;
+        display: flex;
+        justify-content: center;
+        max-width: 92px;
+
+        a{
+          color: $white-color;
+          font-family: $body-font;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 16px;
+          line-height: 22px;
+          padding: 10px 20px;
+        }
+      }
+      
+      @media screen and (max-width: 768px){
+
+        background-color: $white-color;
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        left: 0;
+        top: -100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        transition: 0.3s;
+
+        .close{
+          position: absolute;
+          top: 1rem;
+          right: 1rem;
+        }
+
+
+        ul{
+          display: flex;
+          flex-direction: column;
+          gap: 3rem;
+
+          li{
+            display: flex;
+            justify-content: center;
+            a{
+              font-size: 22px;
+            }
+          }
+        }
+        .signIn{
+            max-width: 200px;
+            margin-top: 3rem;
+          a{
+            //font-size: 22px;
+          }
+        }
+
+      }
     }
+
+    #toggle{
+      top: 0;
+    }
+    @media screen and (max-width: 768px){
+      align-items: center;
+      justify-content: space-between;
+
+    }
+
   }
 
-  .signIn{
-    background-color: $blue;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-
-    a{
-      color: $white-color;
-      font-family: $body-font;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 22px;
-      padding: 13px 24px;
-    }
-
+  @media screen and (max-width: 768px){
+    padding: 1rem;
   }
 }
