--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -5,7 +5,7 @@ $mobile-screen: 768px;
 .navbar{
   display: flex;
   justify-content: center;
-  padding: 40px 20px 0;
+  padding: 40px 20px;
 
   .container{
     max-width: 1200px;
@@ -20,9 +20,11 @@ $mobile-screen: 768px;
     }
 
     .menu{
+
       .close{
         display: none;
       }
+
       width: 100%;
       display: flex;
       justify-content: space-between;
