--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,6 +3,7 @@
 .header{
   display: flex;
   justify-content: center;
+  padding: 0 20px;
 
   .container{
     max-width: 1200px;
@@ -10,17 +11,27 @@
     display: flex;
     justify-content: space-between;
 
+
     .header_image{
-      max-width:100%;
-      object-fit: scale-down;
-      
+      display: flex;
+      justify-content: flex-end;
+      flex: 1;
+
+      img{
+        max-width:100%;
+        max-height:100%;
+      }
+
+
+      @media screen and (max-width: 1020px){
+        display: none;
+      }
     }
+
 
     .info {
       display: flex;
       flex-direction: column;
-
-      //justify-content: center;
 
       padding: 4rem 0;
 
@@ -48,13 +59,18 @@
       .search_bar-container{
         position: relative;
 
-
         .search_bar{
           background-color: $light-blue;
           padding: 1.5rem;
           border-radius: 4px;
           position: absolute;
-          width: 737px;
+          display: flex;
+          justify-content: space-between;
+          gap: 1rem;
+
+          width: 100%;
+          min-width: 737px;
+
 
           .property_dropdown{
             display: none;
@@ -127,9 +143,124 @@
             }
 
           }
+
+        }
+
+
+        .wrapper{
+          position: relative;
+
+          width: 100%;
+
+          .icon-container{
+            position: absolute;
+            padding: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+
+            .location-icon{
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              color: $blue;
+              opacity: 0.35;
+            }
+          }
+
+          input{
+            font-family: $body-font;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 17px;
+            line-height: 27px;
+
+            height: 100%;
+            padding-left: 2rem;
+            width: 100%;
+            border: 1px solid #DDDDDD;
+            box-shadow: inset 0px 1px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 4px;
+
+            &:focus{
+              outline: none;
+            }
+
+
+          }
+        }
+
+        .search{
+          display: flex;
+          flex-direction: row;
+          padding: 1rem;
+          gap: 1em;
+
+          align-items: center;
+          max-width: 150px;
+          width: 100%;
+          border: none;
+          background-color: $blue;
+          cursor: pointer;
+          border-radius: 4px;
+
+          .search-icon{
+            color: $white-color;
+          }
+
+          span{
+            font-family: $body-font;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 22px;
+            color: $white-color;
+
+          }
         }
       }
 
     }
+
+
+    @media screen and (max-width: 768px){
+      padding: 1rem;
+      justify-content: center;
+
+      .search{
+
+        flex: 1;
+
+        span{
+          display: none;
+        }
+
+      }
+
+      .info{
+        .title{
+          font-size: 48px;
+          line-height: 70px;
+        }
+        .description{
+          font-size: 18px;
+        }
+        .search_bar-container{
+
+          .search_bar{
+            min-width: auto;
+
+            .property-type{
+              display: none;
+            }
+          }
+
+        }
+
+      }
+
+
+    }
   }
 }
+
