--- a/src/components/TopOffers/topOffers.scss
+++ b/src/components/TopOffers/topOffers.scss
@@ -4,8 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 20px;
-  height: 100vh;
+  padding: 7.5rem 1.25rem;
   background-color: $light-blue;
 
   .container{
