--- a/src/components/References/references.scss
+++ b/src/components/References/references.scss
@@ -8,6 +8,9 @@
   .container{
     max-width: 1200px;
     width: 100%;
+
+    //height: 100%;
+
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -32,13 +35,34 @@
     }
 
     .reference-cards{
+      max-height: 280px;
+      //gap: 1rem;
+
+      overflow: hidden;
 
       display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
+      flex-direction: column;
       margin-top: 2rem;
 
+
+
+
+      .cards-container{
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 2rem;
+        max-width: 1200px;
+
+
+        transition: transform 0.5s;
+
+
+      }
+
     }
+
 
     .dots{
       display: flex;
