--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -232,34 +232,34 @@
           }
         }
 
-        .search{
-          display: flex;
-          flex-direction: row;
-          padding: 1rem;
-          gap: 1em;
-
-          align-items: center;
-          max-width: 150px;
-          width: 100%;
-          border: none;
-          background-color: $blue;
-          cursor: pointer;
-          border-radius: 4px;
-
-          .search-icon{
-            color: $white-color;
-          }
-
-          span{
-            font-family: $body-font;
-            font-style: normal;
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 22px;
-            color: $white-color;
-
-          }
-        }
+        //.search{
+        //  display: flex;
+        //  flex-direction: row;
+        //  padding: 1rem;
+        //  gap: 1em;
+        //
+        //  align-items: center;
+        //  max-width: 150px;
+        //  width: 100%;
+        //  border: none;
+        //  background-color: $blue;
+        //  cursor: pointer;
+        //  border-radius: 4px;
+        //
+        //  .search-icon{
+        //    color: $white-color;
+        //  }
+        //
+        //  span{
+        //    font-family: $body-font;
+        //    font-style: normal;
+        //    font-weight: 700;
+        //    font-size: 16px;
+        //    line-height: 22px;
+        //    color: $white-color;
+        //
+        //  }
+        //}
       }
 
     }
@@ -268,15 +268,15 @@
     @media screen and (max-width: 768px){
       justify-content: center;
 
-      .search{
+      //.search{
+      //
+      //  flex: 1;
+      //
+      //  span{
+      //    display: none;
+      //  }
+      //}
 
-        flex: 1;
-
-        span{
-          display: none;
-        }
-
-      }
 
       .info{
         .title{
