--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -20,7 +20,9 @@
     }
 
     .menu{
-      z-index: 999;
+      z-index: 99;
+      overflow: hidden;
+
       .close{
         display: none;
       }
@@ -79,7 +81,9 @@
         width: 100%;
         height: 100vh;
         left: 0;
-        top: -100%;
+
+        top: -120%; // -100%
+
         display: flex;
         justify-content: center;
         flex-direction: column;
@@ -123,6 +127,7 @@
     @media screen and (max-width: $mobile-screen){
       align-items: center;
       justify-content: space-between;
+
       .burger{
         display: block;
       }
