--- a/src/components/FilterBar/MultiRangeSlider/multiRangeSlider.scss
+++ b/src/components/FilterBar/MultiRangeSlider/multiRangeSlider.scss
@@ -20,13 +20,28 @@
 .slider__range,
 .slider__left-value,
 .slider__right-value {
+
   position: absolute;
 
   input{
 
-    width: 100px;
-    background-color: red;
     border: none;
+    padding: .25rem;
+
+    background-color: transparent;
+
+    font-family: $body-font;
+    color: $text-color;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 34px;
+
+    &::-webkit-outer-spin-button, &::-webkit-inner-spin-button{
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
 
     &:focus{
       outline: none;
@@ -55,24 +70,15 @@
 .slider__left-value,
 .slider__right-value {
 
-  font-family: $body-font;
-  color: $text-color;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 17px;
-  line-height: 34px;
-
-
-
   margin-top: 20px;
 }
 
 .slider__left-value {
-  left: 6px;
+  left: 0;
 }
 
 .slider__right-value {
-  right: -4px;
+  right: 0;
 }
 
 /* Removing the default appearance */
@@ -125,4 +131,22 @@
   margin-top: 4px;
   pointer-events: all;
   position: relative;
+}
+
+.left-value, .right-value{
+  position: absolute;
+  top: 0;
+
+  font-family: $body-font;
+  color: $text-color;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+
+}
+.left-value{
+  left: 0;
+}
+.right-value{
+  right: 0;
 }
