--- a/src/components/PropertyCard/propertyCard.scss
+++ b/src/components/PropertyCard/propertyCard.scss
@@ -3,6 +3,13 @@
 .card{
   width: 350px;
   height: 420px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+
+  &:hover{
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  }
 
 
   background-color: $white-color;
