--- a/src/components/PropertyList/propertyList.scss
+++ b/src/components/PropertyList/propertyList.scss
@@ -6,21 +6,22 @@
   padding: 0 1rem;
 
   .list-container{
+
+    align-items: center;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 
+    justify-content: center;
     gap: 3rem;
+
+
     padding: 2rem 0;
     max-width: 1200px;
     width: 100%;
+    height: 100%;
 
     @media screen and (max-width: 768px){
       gap: 2rem;
-    }
-
-    @media screen and (max-width: 480px){
-      justify-content: center;
     }
 
   }
