--- a/src/components/FilterBar/filterBar.scss
+++ b/src/components/FilterBar/filterBar.scss
@@ -74,9 +74,59 @@
       .input-wrapper{
         position: relative;
         flex-grow: 1;
+        flex-basis: 15%;
+
+        .bedsBaths-container{
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          font-family: $body-font;
+
+          margin-bottom: 10px;
+
+          &:first-child{
+            margin-top: 10px;
+          }
+
+          .bedsBaths{
+            display: flex;
+            justify-content: center;
+
+            gap: 5px;
+
+            li{
+              padding: 0;
+
+            }
+
+            label{
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              align-content: center;
+              padding: 10px 9px;
+              color: $text-color;
+              width: 41px;
+              height: 41px;
+              border-radius: 50%;
+              border-style: solid;
+              border-color: $dark-blue;
+              transition: 0.3s;
+
+              &:hover{
+                background-color: $dark-blue;
+                color: $light-blue;
+              }
+
+
+            }
+          }
+        }
+
 
         @media screen and (max-width: 480px){
           width: 100%;
+          flex-basis: auto;
         }
 
       }
