--- a/src/components/UI/SelectButton/selectButton.scss
+++ b/src/components/UI/SelectButton/selectButton.scss
@@ -2,6 +2,7 @@
 
 .filter-input{
 
+
   width: 100%;
 
   display: flex;
@@ -21,6 +22,13 @@
     font-weight: 400;
     font-size: 17px;
     line-height: 27px;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    max-width: 148px;
+
   }
 
 }
