bud click outside of dropdown was fixed

--- a/src/components/UI/SelectDropdown/selectDropdown.scss
+++ b/src/components/UI/SelectDropdown/selectDropdown.scss
@@ -1,5 +1,10 @@
 @import "../../../styles/variables";
 
+
+.display-none{
+  display: none !important;
+}
+
 .select-dropdown{
   list-style: none;
   position: absolute;
