--- a/src/components/PropertyCard/propertyCard.scss
+++ b/src/components/PropertyCard/propertyCard.scss
@@ -9,13 +9,15 @@
 
   &:hover{
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    img{
+      transform: scale(1.05)
+    }
   }
 
 
   background-color: $white-color;
   flex-shrink: 0;
   border-radius: 4px;
-  //cursor: pointer;
 
   .container{
     display: flex;
@@ -27,10 +29,13 @@
       position: relative;
       min-height: 250px;
       width: 350px;
+      overflow: hidden;
 
 
 
       img{
+        transition: all .2s ease-in-out;
+
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
         height: 250px;
@@ -45,6 +50,7 @@
         top: 1rem;
         left: 1rem;
         border-radius: 4px;
+        z-index: 20;
 
         p{
           font-family: $body-font;
