--- a/src/pages/PropertyDetails/propertyDetails.scss
+++ b/src/pages/PropertyDetails/propertyDetails.scss
@@ -3,10 +3,140 @@
 .property-details{
   display: flex;
   justify-content: center;
+  padding: 0 1rem;
 
   .container{
     max-width: 1200px;
     width: 100%;
     display: flex;
+    gap: 1rem;
+
+    .main-container{
+      width: 100%;
+
+      .frame{
+        display: flex;
+        flex-direction: column;
+        //gap: 1rem;
+
+        .image-container{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+
+          .image{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            width: 100%;
+            height: 420px;
+            border-radius: 5px;
+
+
+            img{
+              width: 100%;
+              height: 420px;
+              object-fit: cover;
+              border-radius: 5px;
+
+            }
+
+          }
+
+          .photo-total{
+            background-color: rgba(0, 0, 0, .8);
+            cursor: pointer;
+
+            display: flex;
+            padding: .6rem;
+            align-items: center;
+            position: absolute;
+            bottom: 3%;
+            left: 2%;
+            gap: 5px;
+            border-radius: 16px;
+            span{
+              font-family: $body-font;
+              color: $white-color;
+            }
+
+            &:hover{
+              background-color: rgba(0, 0, 0, 1);
+            }
+
+          }
+
+          .left-arrow, .right-arrow{
+            position: absolute;
+            color: $white-color;
+            filter: drop-shadow(0px 0px 10px #000);
+            cursor: pointer;
+            background-color: transparent;
+            border: none;
+          }
+
+          .left-arrow{
+            left: 0;
+          }
+
+          .right-arrow{
+            right: 0;
+          }
+
+          .status{
+            cursor: default;
+            background: rgba(20, 27, 45, .75);
+            position: absolute;
+            top: 1rem;
+            left: 1rem;
+            border-radius: 4px;
+            z-index: 20;
+
+            p{
+              font-family: $body-font;
+              padding: 6px;
+              opacity: 1;
+              color: $white-color;
+              font-size: 14px;
+            }
+          }
+        }
+
+        .images-slider{
+          display: flex;
+          gap: 1rem;
+
+          overflow-x: auto;
+          overflow-y: hidden;
+
+          max-width: 832px;
+          padding: 1rem .5rem;
+
+          .slide{
+            height: 100px;
+            width: 190px;
+            border-radius: 6px;
+            cursor: pointer;
+
+            img{
+              box-sizing: border-box;
+              height: 100px;
+              width: 190px;
+              object-fit: cover;
+              border-radius: 6px;
+
+            }
+
+
+          }
+
+          &::-webkit-scrollbar{
+            display: none;
+          }
+        }
+      }
+    }
   }
 }
