--- a/src/pages/PropertyDetails/propertyDetails.scss
+++ b/src/pages/PropertyDetails/propertyDetails.scss
@@ -13,6 +13,9 @@
 
     .main-container{
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
 
       .frame{
         display: flex;
@@ -85,23 +88,6 @@
             right: 0;
           }
 
-          .status{
-            cursor: default;
-            background: rgba(20, 27, 45, .75);
-            position: absolute;
-            top: 1rem;
-            left: 1rem;
-            border-radius: 4px;
-            z-index: 20;
-
-            p{
-              font-family: $body-font;
-              padding: 6px;
-              opacity: 1;
-              color: $white-color;
-              font-size: 14px;
-            }
-          }
         }
 
         .images-slider{
@@ -134,6 +120,123 @@
 
           &::-webkit-scrollbar{
             display: none;
+          }
+        }
+      }
+
+      .property-info{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        h2{
+          font-family: $body-font;
+          color: $text-color;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 28px;
+          line-height: 23px;
+        }
+
+        .status{
+          background: rgba(20, 27, 45, .9);
+          border-radius: 4px;
+          max-width: 90px;
+          width: 100%;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          align-content: center;
+
+          p{
+            font-family: $body-font;
+            padding: 6px;
+            opacity: 1;
+            color: $white-color;
+            font-size: 16px;
+          }
+        }
+
+        .data{
+          margin: .7rem 0;
+          display: flex;
+          flex-direction: row;
+          gap: 10px;
+
+          p{
+
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 5px;
+            font-family: $body-font;
+            line-height: 25px;
+
+
+            border-radius: 4px;
+            padding: .4rem;
+            background: rgba(243, 243, 250, 1);
+
+          }
+        }
+
+        address{
+          font-family: $body-font;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 23px;
+          color: $text-color;
+        }
+
+        .property-facts{
+          ul{
+            list-style-type: none;
+            display: grid;
+            grid-template-columns: auto auto auto;
+            width: fit-content;
+            column-gap: 3rem;
+            row-gap: 1rem;
+
+            li{
+              display: flex;
+              align-content: center;
+              align-items: center;
+              gap: .5rem;
+              width: fit-content;
+
+
+              font-family: $body-font;
+              .facts-info{
+                display: flex;
+                flex-direction: column;
+                span{
+                  display: inline-block;
+                  font-size: 12px;
+                }
+              }
+
+            }
+          }
+        }
+        .overview-info{
+          margin: 3rem 0;
+          .overview-title{
+            font-family: $headings-font;
+            color: $text-color;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 22px;
+            line-height: 28px;
+            margin-bottom: 1rem;
+          }
+          .overview-description{
+            font-family: $body-font;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 17px;
+            line-height: 26px;
+            color: $dark-blue;
           }
         }
       }
