--- a/src/pages/PropertyDetails/propertyDetails.scss
+++ b/src/pages/PropertyDetails/propertyDetails.scss
@@ -125,119 +125,137 @@
       }
 
       .property-info{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+        //display: flex;
+        //justify-content: space-between;
 
-        h2{
-          font-family: $body-font;
-          color: $text-color;
-          font-style: normal;
-          font-weight: 600;
-          font-size: 28px;
-          line-height: 23px;
+        .agent-profile{
+          //width: 300px;
+          //height: 100%;
+          //background-color: $light-blue;
+          //border-radius: 4px;
+
         }
-
-        .status{
-          background: rgba(20, 27, 45, .9);
-          border-radius: 4px;
-          max-width: 90px;
-          width: 100%;
-
+        .property-wrapper{
           display: flex;
-          justify-content: center;
-          align-items: center;
-          align-content: center;
+          flex-direction: column;
+          gap: 1rem;
+          width: fit-content;
 
-          p{
+
+
+          h2{
             font-family: $body-font;
-            padding: 6px;
-            opacity: 1;
-            color: $white-color;
-            font-size: 16px;
+            color: $text-color;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 28px;
+            line-height: 23px;
           }
-        }
 
-        .data{
-          margin: .7rem 0;
-          display: flex;
-          flex-direction: row;
-          gap: 10px;
-
-          p{
-
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 5px;
-            font-family: $body-font;
-            line-height: 25px;
+          .status{
+            width: 100%;
 
 
-            border-radius: 4px;
-            padding: .4rem;
-            background: rgba(243, 243, 250, 1);
-
-          }
-        }
-
-        address{
-          font-family: $body-font;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 23px;
-          color: $text-color;
-        }
-
-        .property-facts{
-          ul{
-            list-style-type: none;
-            display: grid;
-            grid-template-columns: auto auto auto;
-            width: fit-content;
-            column-gap: 3rem;
-            row-gap: 1rem;
-
-            li{
-              display: flex;
-              align-content: center;
-              align-items: center;
-              gap: .5rem;
-              width: fit-content;
+            p{
+              display: inline-block;
+              background: rgba(20, 27, 45, .9);
+              border-radius: 4px;
 
 
               font-family: $body-font;
-              .facts-info{
-                display: flex;
-                flex-direction: column;
-                span{
-                  display: inline-block;
-                  font-size: 12px;
-                }
-              }
+              padding: 6px;
+              opacity: 1;
+              color: $white-color;
+              font-size: 16px;
+            }
+          }
+
+          .data{
+            margin: .7rem 0;
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+
+            p{
+
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              gap: 5px;
+              font-family: $body-font;
+              line-height: 25px;
+
+
+              border-radius: 4px;
+              padding: .4rem;
+              background: rgba(243, 243, 250, 1);
 
             }
           }
-        }
-        .overview-info{
-          margin: 3rem 0;
-          .overview-title{
-            font-family: $headings-font;
-            color: $text-color;
-            font-style: normal;
-            font-weight: 700;
-            font-size: 22px;
-            line-height: 28px;
-            margin-bottom: 1rem;
-          }
-          .overview-description{
+
+          address{
             font-family: $body-font;
             font-style: normal;
             font-weight: 400;
-            font-size: 17px;
-            line-height: 26px;
-            color: $dark-blue;
+            line-height: 23px;
+            color: $text-color;
           }
+
+          .property-facts{
+            ul{
+              list-style-type: none;
+              display: grid;
+              grid-template-columns:repeat(5, 1fr);
+              width: fit-content;
+              row-gap: 1rem;
+
+              li{
+                display: flex;
+                align-content: center;
+                align-items: center;
+                gap: .5rem;
+                width: fit-content;
+
+
+                font-family: $body-font;
+                .facts-info{
+                  display: flex;
+                  flex-direction: column;
+                  span{
+                    display: inline-block;
+                    font-size: 12px;
+                  }
+                }
+
+              }
+            }
+          }
+
+        }
+
+
+
+
+      }
+
+      .overview-info{
+        margin: 3rem 0;
+        .overview-title{
+          font-family: $headings-font;
+          color: $text-color;
+          font-style: normal;
+          font-weight: 700;
+          font-size: 22px;
+          line-height: 28px;
+          margin-bottom: 1rem;
+        }
+        .overview-description{
+          font-family: $body-font;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 17px;
+          line-height: 26px;
+          color: $dark-blue;
         }
       }
     }
