--- a/src/pages/PropertyDetails/propertyDetails.scss
+++ b/src/pages/PropertyDetails/propertyDetails.scss
@@ -28,6 +28,25 @@
           align-items: center;
           position: relative;
 
+          .status{
+            background: rgba(20, 27, 45, .9);
+            border-radius: 4px;
+            top: 4%;
+            left: 2%;
+
+            position: absolute;
+
+
+            p{
+
+              font-family: $body-font;
+              padding: 6px;
+              opacity: 1;
+              color: $white-color;
+              font-size: 16px;
+            }
+          }
+
           .image{
             display: flex;
             justify-content: center;
@@ -125,21 +144,80 @@
       }
 
       .property-info{
-        //display: flex;
-        //justify-content: space-between;
 
-        .agent-profile{
-          //width: 300px;
-          //height: 100%;
-          //background-color: $light-blue;
-          //border-radius: 4px;
-
-        }
         .property-wrapper{
           display: flex;
           flex-direction: column;
           gap: 1rem;
-          width: fit-content;
+          //width: fit-content;
+
+          .property-short-info{
+            display: flex;
+            gap: 2.5rem;
+
+            .address{
+              flex: 1;
+              display: flex;
+              flex-direction: column;
+              border-radius: 4px;
+              background: rgba(243, 243, 250, 1);
+              padding: .5rem 1rem;
+
+              p{
+                width: fit-content;
+                font-family: $body-font;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 23px;
+                color: $text-color;
+
+                &:last-child{
+                  color: rgba(20, 27, 45, .7);
+                  font-size: 13px;
+                  font-weight: 400;
+                }
+              }
+
+            }
+
+            .data{
+              flex: 1;
+              display: flex;
+              flex-direction: row;
+              background: rgba(243, 243, 250, 1);
+              padding: .5rem 1rem;
+              border-radius: 4px;
+
+
+              p{
+                flex-grow: 1;
+                flex-basis: 33%;
+                //flex: 0 0 33.33%;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                font-family: $body-font;
+                line-height: 25px;
+
+
+                &:nth-child(2){
+                  border-left-style: solid;
+                  border-left-color: rgba(20, 27, 45, .8);
+                  border-right-style: solid;
+                  border-right-color: rgba(20, 27, 45, .8);
+                }
+
+                span{
+                  font-size: 15px;
+                }
+
+
+              }
+            }
+          }
 
 
 
@@ -152,80 +230,91 @@
             line-height: 23px;
           }
 
-          .status{
-            width: 100%;
+          //.status{
+          //  width: 100%;
+          //
+          //
+          //  p{
+          //    display: inline-block;
+          //    background: rgba(20, 27, 45, .9);
+          //    border-radius: 4px;
+          //
+          //
+          //    font-family: $body-font;
+          //    padding: 6px;
+          //    opacity: 1;
+          //    color: $white-color;
+          //    font-size: 16px;
+          //  }
+          //}
 
+          //.data{
+          //  margin: .7rem 0;
+          //  display: flex;
+          //  flex-direction: row;
+          //  gap: 10px;
+          //
+          //  p{
+          //
+          //    display: flex;
+          //    flex-direction: row;
+          //    align-items: center;
+          //    gap: 5px;
+          //    font-family: $body-font;
+          //    line-height: 25px;
+          //
+          //
+          //    border-radius: 4px;
+          //    padding: .4rem;
+          //    background: rgba(243, 243, 250, 1);
+          //
+          //  }
+          //}
 
-            p{
-              display: inline-block;
-              background: rgba(20, 27, 45, .9);
-              border-radius: 4px;
-
-
-              font-family: $body-font;
-              padding: 6px;
-              opacity: 1;
-              color: $white-color;
-              font-size: 16px;
-            }
-          }
-
-          .data{
-            margin: .7rem 0;
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-
-            p{
-
-              display: flex;
-              flex-direction: row;
-              align-items: center;
-              gap: 5px;
-              font-family: $body-font;
-              line-height: 25px;
-
-
-              border-radius: 4px;
-              padding: .4rem;
-              background: rgba(243, 243, 250, 1);
-
-            }
-          }
-
-          address{
-            font-family: $body-font;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 23px;
-            color: $text-color;
-          }
+          //address{
+          //  font-family: $body-font;
+          //  font-style: normal;
+          //  font-weight: 400;
+          //  line-height: 23px;
+          //  color: $text-color;
+          //}
 
           .property-facts{
+            .property-facts-title{
+              font-family: $headings-font;
+              color: $text-color;
+              font-style: normal;
+              font-weight: 700;
+              font-size: 22px;
+              line-height: 28px;
+              margin-bottom: 1rem;
+            }
             ul{
               list-style-type: none;
               display: grid;
-              grid-template-columns:repeat(5, 1fr);
+              grid-template-columns: repeat(5, 1fr);
               width: fit-content;
               row-gap: 1rem;
+              column-gap: 1rem;
 
               li{
                 display: flex;
                 align-content: center;
                 align-items: center;
                 gap: .5rem;
-                width: fit-content;
-
-
                 font-family: $body-font;
+
                 .facts-info{
                   display: flex;
                   flex-direction: column;
+
                   span{
                     display: inline-block;
                     font-size: 12px;
                   }
                 }
+
+
 
               }
             }
