--- a/src/components/ContactFrom/ContactForm.scss
+++ b/src/components/ContactFrom/ContactForm.scss
@@ -1,13 +1,13 @@
 @import "../../styles/variables";
 
 .contact-form{
-  min-width: 352px;
+  //min-width: 352px;
   width: 100%;
   padding: 1.5rem;
   background-color: $light-blue;
   border-radius: 4px;
 
-  .container{
+  .contact-form-container{
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
