--- a/src/pages/PropertyDetails/propertyDetails.scss
+++ b/src/pages/PropertyDetails/propertyDetails.scss
@@ -3,12 +3,32 @@
 .property-details{
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 0 1rem;
+  flex-direction: column;
 
-  .container{
+  .nearBy-properties{
     max-width: 1200px;
     width: 100%;
+    margin-top: 5rem;
+
+    .nearby-title{
+      font-family: $headings-font;
+      color: $text-color;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 22px;
+      line-height: 28px;
+    }
+  }
+
+  .details-container{
+    max-width: 1200px;
+    width: 100%;
+
     display: flex;
+    flex-wrap: wrap;
+
     gap: 1rem;
 
     .main-container{
@@ -17,10 +37,11 @@
       flex-direction: column;
       gap: 1.5rem;
 
+      flex: 1;
+
       .frame{
         display: flex;
         flex-direction: column;
-        //gap: 1rem;
 
         .image-container{
           display: flex;
@@ -200,7 +221,7 @@
             ul{
               list-style-type: none;
               display: grid;
-              grid-template-columns:  repeat(auto-fit, minmax(170px, 1fr));
+              grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
 
               row-gap: 1rem;
               column-gap: 1rem;
@@ -252,6 +273,36 @@
           color: $dark-blue;
         }
       }
+
+      .google-map-container{
+
+
+        .google-map{
+          border-radius: 4px;
+          border: 1px solid #DDDDDD;
+          height: 350px;
+          width: 100%;
+
+        }
+
+        .google-map-title{
+          font-family: $headings-font;
+          color: $text-color;
+          font-style: normal;
+          font-weight: 700;
+          font-size: 22px;
+          line-height: 28px;
+          margin-bottom: 1rem;
+        }
+
+      }
+
+      .property-slider-wrapper{
+        width: 100%;
+        position: relative;
+        height: 100%;
+      }
     }
+
   }
 }
