--- a/src/components/PropertyCard/propertyCard.scss
+++ b/src/components/PropertyCard/propertyCard.scss
@@ -7,17 +7,20 @@
   cursor: pointer;
   transition: all .2s ease-in-out;
 
+  border-radius: 4px;
+
   &:hover{
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     img{
-      transform: scale(1.05)
+      transform: scale(1.05);
+
     }
   }
 
 
   background-color: $white-color;
   flex-shrink: 0;
-  border-radius: 4px;
+  //border-radius: 4px;
 
   .container{
     display: flex;
