--- a/src/pages/PropertyDetails/propertyDetails.scss
+++ b/src/pages/PropertyDetails/propertyDetails.scss
@@ -8,6 +8,7 @@
   flex-direction: column;
 
   .nearBy-properties{
+    position: relative;
     max-width: 1200px;
     width: 100%;
     margin-top: 5rem;
