--- a/src/components/Authentication/authentication.scss
+++ b/src/components/Authentication/authentication.scss
@@ -111,6 +111,7 @@
         font-weight: 600;
         font-size: 16px;
         line-height: 22px;
+        width: 100%;
       }
 
       .checkbox-container{
