--- a/src/components/PropertyCard/propertyCard.scss
+++ b/src/components/PropertyCard/propertyCard.scss
@@ -33,6 +33,8 @@
       min-height: 250px;
       width: 350px;
       overflow: hidden;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
 
 
 
@@ -162,7 +164,7 @@
       }
     }
 
-    .skeleton-box:empty{
+    .skeleton-box{
       width: 100%;
       height: 100%;
 
