get, add and delete favourite services were added

--- a/src/components/UI/FavouriteIcon/favourite.scss
+++ b/src/components/UI/FavouriteIcon/favourite.scss
@@ -1,6 +1,7 @@
 @import "../../../styles/variables";
 
 .favourite{
+  z-index: 99;
   cursor: pointer;
   display: flex;
   justify-content: center;
