--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,11 @@
+@import "./styles/variables";
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
+}
+.notification{
+    font-family: $body-font;
 }
