--- a/src/pages/AddHome/addHome.scss
+++ b/src/pages/AddHome/addHome.scss
@@ -44,23 +44,23 @@
         flex-direction: column;
         margin-bottom: 1rem;
 
-        textarea{
-          padding: .9rem 1rem;
-          border-radius: 4px;
-          border: 1px solid #DDDDDD;
-          background-color: $white-color;
-
-          font-family: $body-font;
-          color: $text-color;
-          font-style: normal;
-          font-weight: 400;
-          font-size: 17px;
-          line-height: 27px;
-
-          &:focus{
-            outline: none;
-          }
-        }
+        //textarea{
+        //  padding: .9rem 1rem;
+        //  border-radius: 4px;
+        //  border: 1px solid #DDDDDD;
+        //  background-color: $white-color;
+        //
+        //  font-family: $body-font;
+        //  color: $text-color;
+        //  font-style: normal;
+        //  font-weight: 400;
+        //  font-size: 17px;
+        //  line-height: 27px;
+        //
+        //  &:focus{
+        //    outline: none;
+        //  }
+        //}
 
         #property-description {
           resize: none;
