--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -20,6 +20,21 @@
     }
 
     .menu{
+      .count-number{
+        font-family: $body-font;
+        position: absolute;
+        right: 0;
+        top: 0;
+        background: crimson;
+        font-size: 12px;
+        color: white;
+        border-radius: 50%;
+        height: 23px;
+        width: 23px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
       z-index: 100;
       overflow: hidden;
 
@@ -39,21 +54,10 @@
         .favourites-link{
           position: relative;
 
-          span{
-            font-family: $body-font;
-            position: absolute;
-            right: 0;
-            top: 0;
-            background: crimson;
-            font-size: 12px;
-            color: white;
-            border-radius: 50%;
-            height: 23px;
-            width: 23px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          }
+        }
+
+        .messages-link{
+          position: relative;
         }
 
         li {
